Completar REQ-005, REQ-006 y REQ-009 e integrar CRUD al menu